# swap

./: .gitignore  LICENSE  README.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
manager/: Cargo.toml
manager/src/: checksum.rs  compression.rs  file.rs  lib.rs  packager.rs
shared/: Cargo.toml
shared/src/: apparmor.rs  lib.rs  package.rs  package_details.rs
web/: Cargo.toml
