[package]
name = "manager"
version = "0.1.0"
authors = ["siul"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde_json = "1.0.56"
tracing = "0.1.16"

#Hashing Lib
blake3 = "0.3.5"

#File packaging / compression
tar = "0.4"

brotli = "3.3.0"